<resources>
    <string name="app_name" translatable="false">AppMark</string>
    <string name="permission_denied">Cannot run program without permissions</string>
    <string name="create_new">Create new</string>
    <string name="loading">Loading…</string>
    <string name="no_projects">You have not projects yet</string>
    <string name="app_icon">App icon</string>
    <string name="project_name">Project name: </string>
    <string name="project_package">Project package: </string>
    <string name="version_name">Version name: </string>
    <string name="version_id">Version id: </string>
    <string name="next">Next</string>
    <string name="incorrect_version_id">Incorrect version id</string>
    <string name="incorrect_package">Incorrect package name</string>
    <string name="empty_name">App name cannot be empty</string>
    <string name="empty_version_name">Version name cannot be empty</string>
    <string name="internal_storage">Internal storage</string>
    <string name="gallery">Gallery</string>
    <string name="select_image">Select image</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_project_warn">Do you really want to delete project ? \nThis action cannot be undone</string>
    <string name="create">Create…</string>
    <string name="go_to">Go to…</string>
    <string name="no_opened_file">No file opened</string>
    <string name="tap_recent">Tap below to see recent files</string>
    <string name="goto_project">Go to project</string>
    <string name="goto_opened">Go to opened file</string>
    <string name="create_file">Create file</string>
    <string name="create_folder">Create folder</string>
    <string name="import_image">Import image</string>
    <string name="recent_files">Recent files</string>
    <string name="open_file_error">Cannot open this file</string>
    <string name="enter_filename">Enter file name:</string>
    <string name="enter_foldername">Enter folder name:</string>
    <string name="filename_error">Incorrect filename</string>
    <string name="delete">Delete</string>
    <string name="select_action">Select action</string>
    <string name="rename">Rename</string>
    <string name="delete_file_warn">Do you really want to delete this ?</string>
    <string name="delete_file_error">Error while deleting file</string>
    <string name="run_project">Run project</string>
    <string name="project_settings">Project settings</string>
    <string name="replace">Replace</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="exit">Exit</string>
    <string name="xml_error">Error in xml-file here: %1$s.</string>
    <string name="view">Editor</string>
    <string name="file_not_found">File in path (%1$s) does not exist \nChange path in "Project settings"</string>
    <string name="retrieving_error">Error while retrieving file</string>
    <string name="string_name">Name</string>
    <string name="string_value">Value</string>
    <string name="incorrect_string_name">String with same name already exists</string>
    <string name="loading_project">Loading project…</string>
    <string name="select_locale">Select locale</string>
    <string name="aapt">Aapt running…</string>
    <string name="compilation">Compilation</string>
    <string name="dx">Dex running…</string>
    <string name="signing">Signing apk…</string>
    <string name="settings">Settings</string>
    <string name="undo_on_back_title">Undo on back pressed</string>
    <string name="undo_on_back_subtitle">If setting is turned off, back button will close project</string>
    <string name="text_editor_settings">Text editor settings</string>
    <string name="system_settings">System settings</string>
    <string name="open_last_project_title">Open last launched project</string>
    <string name="opened_project_subtitle">Open project that was launched before closing app</string>
    <string name="debugger_enabled_title">Debugger</string>
    <string name="debugger_enabled_subtitle">Show crash reason</string>
    <string name="main_editor_font_size_title">Font size</string>
    <string name="main_editor_font_size_subtitle">Change text size in code editor</string>
    <string name="debug_activity_title">Oops! App crashed… The reason is below:</string>
    <string name="successfully_copied">Successfully copied to clipboard</string>
    <string name="tap_to_copy">Tap to copy</string>
    <string name="app_info">Service info</string>
    <string name="version_number">Version number:</string>
    <string name="app_version_name">Version name:</string>
    <string name="server_status">Server status:</string>
    <string name="offline">Offline</string>
    <string name="actual_version_name">%1$s (newest)</string>
    <string name="newest_version_available">%1$s (newest is %2$s)</string>
    <string name="main_developer_description">Alex Sokol - main app developer and idea maker</string>
    <string name="designer_description">Alex Mikhno - main designer</string>
    <string name="second_programmer">Petr Kot - second developer, helper</string>
    <string name="developers">Developers (VIPAPP)</string>
    <string name="new_version_available">New version %1$s is available in Play Store</string>
    <string name="replaceable">Replaceable (RexExp)</string>
    <string name="replacement">Replacement</string>
    <string name="locale">en</string>
    <string name="changelog">Changelog</string>
    <string name="error_create_file">Cannot create this file or directory</string>
    <string name="in_developing">Function in developing</string>
    <string name="java">Compiling java…</string>
    <string name="apk_signing">Signing apk…</string>
    <string name="pkg">Packaging…</string>
    <string name="aapt_error">Aapt error</string>
    <string name="java_error">Java error</string>
    <string name="dx_error">Dex error</string>
    <string name="make_import">Do you want to import %1$s ?</string>
    <string name="max_lines_in_text_editor">Max symbols in text editor</string>
    <string name="max_lines_in_editor_description">Max count of symbols in tens of thousands (default 150 000)</string>
    <string name="too_large_file">This file contains %1$d symbols. Due to your settings max symbols is %2$d. File text will be cropped. You can view this file with other program</string>
    <string name="open">Open</string>
    <string name="continue_string">Continue</string>
    <string name="settings_debug">Debug settings</string>
    <string name="highlight_debug">Show highlight updates</string>
    <string name="highlight_debug_description">Show toasts when highlight updated in code editor</string>
    <string name="highlight_updated">Highlight updated</string>
    <string name="text_cropped">Due to editor settings, code was cropped</string>
    <string name="file_path_copied">File path copied</string>
    <string name="copy_path">Copy path</string>
    <string name="community">Community</string>
    <string name="project_with_name_already_exists">Project with same name already exists</string>
    <string name="xml_error_label">XML ERROR</string>
    <string name="add">Add</string>
    <string name="enter_locale_name">Enter locale name</string>
    <string name="locale_name_error">Invalid locale name</string>
    <string name="project_broken">Error while loading project</string>
    <string name="select_widget">Select widget</string>
    <string name="delete_view_warn">Do you really want to delete view ?</string>
    <string name="enter_string">Enter string</string>
    <string name="text">Text</string>
    <string name="id">Id</string>
    <string name="layout_height">Layout height</string>
    <string name="layout_width">Layout width</string>
    <string name="background">Background</string>
    <string name="other">Other</string>
    <string name="select_size">Select size</string>
    <string name="incorrect_number">Incorrect number</string>
    <string name="enter_number">Enter number</string>
    <string name="select_drawable">Select drawable</string>
    <string name="drawable">Drawable</string>
    <string name="color">Color</string>
    <string name="visibility">Visibility</string>
    <string name="enabled">Enabled</string>
    <string name="debugger_disabled_msg">Debugger disabled. You can turn it on in settings</string>
    <string name="all">all</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="top">top</string>
    <string name="bottom">bottom</string>
    <string name="padding">Padding</string>
    <string name="margin">Margin</string>
    <string name="show_design_errors_title">Show design errors</string>
    <string name="show_design_errors_description">Toast error when design build is unsuccessful</string>
    <string name="orientation">Orientation</string>
    <string name="weight_sum">Weight sum</string>
    <string name="gravity">Gravity</string>
    <string name="layout_gravity">Layout gravity</string>
    <string name="weight">Weight</string>
    <string name="rotation">Rotation</string>
    <string name="alpha">Alpha</string>
    <string name="translation_x">Translation X</string>
    <string name="translation_y">Translation Y</string>
    <string name="scale_x">Scale X</string>
    <string name="scale_y">Scale Y</string>
    <string name="select_gravity">Select gravity</string>
    <string name="text_size">Text size</string>
    <string name="text_style">Text style</string>
    <string name="text_color">Text color</string>
    <string name="single_line">Single line</string>
    <string name="lines">Lines</string>
    <string name="add_inside">Add inside</string>
    <string name="add_before">Add before</string>
    <string name="hint">Hint</string>
    <string name="hint_color">Hint color</string>
    <string name="input_type">Input type</string>
    <string name="ime_option">Ime option</string>
    <string name="src">Src</string>
    <string name="scale_type">Scale type</string>
    <string name="checked">Checked</string>
    <string name="max">Max</string>
    <string name="progress">Progress</string>
    <string name="indeterminate">Indeterminate</string>
    <string name="progress_bar_style">Progress bar style</string>
    <string name="runtime_error">Runtime error</string>
    <string name="errors_and_warnings">Errors and warnings</string>
</resources>
