<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:srcCompat="@drawable/app_icon_default"
                tools:ignore="ContentDescription" />

            <com.vipapp.appmark2.widget.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/app_icon"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5dp">

            <com.vipapp.appmark2.widget.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/project_name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <com.vipapp.appmark2.widget.EditText
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_gray"
                android:ems="10"
                android:hint="MyApp"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:singleLine="true"
                android:textColor="#444444"
                android:textColorHint="#666666"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

            <com.vipapp.appmark2.widget.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:text="@string/project_package"
                android:textColor="#000000"
                android:textSize="18sp" />

            <com.vipapp.appmark2.widget.EditText
                android:id="@+id/project_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_gray"
                android:ems="10"
                android:hint="com.mycompany.myapp"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:singleLine="true"
                android:textColor="#444444"
                android:textColorHint="#666666"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.vipapp.appmark2.widget.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/version_name"
            android:textColor="#000000"
            android:textSize="18sp" />

        <com.vipapp.appmark2.widget.EditText
            android:id="@+id/version_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/round_gray"
            android:ems="5"
            android:gravity="center"
            android:hint="1.0"
            android:inputType="textPersonName"
            android:padding="3dp"
            android:singleLine="true"
            android:textColor="#444444"
            android:textColorHint="#666666"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.vipapp.appmark2.widget.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/version_id"
            android:textColor="#000000"
            android:textSize="18sp" />

        <com.vipapp.appmark2.widget.EditText
            android:id="@+id/version_id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/round_gray"
            android:ems="5"
            android:gravity="center"
            android:hint="1"
            android:inputType="numberSigned"
            android:padding="3dp"
            android:singleLine="true"
            android:textColor="#444444"
            android:textColorHint="#666666"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <com.vipapp.appmark2.widget.TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/less_round_blue"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="7dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="7dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>