<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#fffafafa"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <com.vipapp.appmark2.widget.TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#444444"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingLeft="5dp"
                    app:srcCompat="@drawable/expand" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.vipapp.appmark2.widget.TextView
                android:id="@+id/no_projects"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_projects"
                android:textSize="18sp"
                android:visibility="gone" />

            <com.vipapp.appmark2.widget.RecyclerView
                android:id="@+id/project_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:default_view="@layout/project_default"
                app:holder="ProjectHolder"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:menuClass="ProjectMenu">

            </com.vipapp.appmark2.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.vipapp.appmark2.widget.TextView
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <com.vipapp.appmark2.widget.TextView
        android:id="@+id/create_new"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_blue"
        android:elevation="10dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/create_new"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold"
        app:textAllCaps="true" />

    <LinearLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:alpha="0"
        android:background="#88000000"
        android:clickable="false"
        android:visibility="gone">

        <com.vipapp.appmark2.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_white"
            app:default_view="@layout/main_menu_default"
            app:holder="MainMenuHolder"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:menuClass="MainScreenMenu" />
    </LinearLayout>

</FrameLayout>